<resources>
    <string name="app_name">Score Keeper</string>
    <string name="screen_name">Football Scores App </string>
    <string name="reset">Reset </string>
    <string name="liverpool">LIVERPOOL </string>
    <string name="liverpool_goal">0 </string>
    <string name="plus"> + </string>
    <string name="minus"> - </string>
    <string name="ball_description"> Image of a ball </string>
    <string name="liverpool_foul_plus"> Foul  + </string>
    <string name="liverpool_foul_minus"> Foul  - </string>
    <string name="foul_description"> Image of a foul in football </string>

    <string name="chelsea">CHELSEA </string>
</resources>